<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
...
                android:text="@string/auth_register"
                android:textColor="@color/auth_title_text"
                android:textSize="18sp" />


            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/til_last_name"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_last_name"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:hint="@string/auth_input_last_name_hint"
                    android:inputType="textCapSentences" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/til_first_name"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                android:layout_marginBottom="0dp"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_first_name"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:hint="@string/auth_input_first_name_hint"
                    android:inputType="textCapSentences" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/til_middle_name"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                app:errorEnabled="false">
...
                    android:id="@+id/et_middle_name"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:hint="@string/auth_input_middle_name_hint"
                    android:inputType="textCapWords" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/sc_no_middle_name"
                    style="@style/Profile.Edit.Switch"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/profile_edit_user_no_middle_name" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/til_email"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                android:layout_marginBottom="8dp"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/auth_input_phone_hint"
                    android:inputType="textEmailAddress" />

...
                android:id="@+id/password_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default" />

            <LinearLayout
                android:id="@+id/llAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
...
                android:text="@string/auth_error_agreement"
                android:textColor="@color/attention_action"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.example.ui.views.loading.CustomLoadingButton
                android:id="@+id/ib_register"
                style="@style/BtnLoadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_default"
                android:layout_marginVertical="20dp"
                app:buttonMinHeight="@dimen/auth_button_min_height"
...
