<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.example.ui.views.CustomTextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Profile.Edit.InputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tilPasswordConfirm"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="5dp"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/Profile.Edit.Input.SingleLine"
            android:hint="@string/auth_input_password_hint"
            android:maxLength="64"
            android:inputType="textPassword" />

    </com.example.ui.views.CustomTextInputLayout>

    <com.example.ui.views.CustomTextInputLayout
        android:id="@+id/tilPasswordConfirm"
        style="@style/Profile.Edit.InputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordConfirm"
            style="@style/Profile.Edit.Input.SingleLine"
            android:hint="@string/auth_input_password_confirm_hint"
            android:maxLength="64"
            android:inputType="textPassword" />
    </com.example.ui.views.CustomTextInputLayout>

    <View
        android:id="@+id/first"
        android:layout_width="70dp"
        android:layout_height="3dp"
        android:layout_marginTop="7dp"
        android:visibility="gone"
        android:background="@drawable/password_red"
        app:layout_constraintStart_toStartOf="@+id/tilPassword"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>

    <View
        android:id="@+id/second"
        android:layout_width="70dp"
        android:layout_height="3dp"
        android:layout_marginTop="7dp"
        android:layout_marginStart="5dp"
        android:visibility="gone"
        android:background="@drawable/password_yellow"
        app:layout_constraintStart_toEndOf="@+id/first"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>

    <View
        android:id="@+id/third"
        android:layout_width="70dp"
        android:layout_height="3dp"
        android:layout_marginTop="7dp"
        android:layout_marginStart="5dp"
        android:visibility="gone"
        android:background="@drawable/password_green"
        app:layout_constraintStart_toEndOf="@+id/second"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"/>

    <TextView
        android:id="@+id/tv_not_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:text="@string/passwords_do_not_match"
        android:textColor="@color/badge_attention_high"
        app:layout_constraintStart_toStartOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="@+id/tilPasswordConfirm"
        app:layout_constraintTop_toBottomOf="@+id/tilPasswordConfirm"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="@+id/tilPasswordConfirm"
        app:layout_constraintTop_toBottomOf="@+id/first"
        tools:text="Слишком простой пароль. Рекомендуем добавить:" />

    <TextView
        android:id="@+id/tv_errors"
        android:layout_width="0dp"
        android:layout_marginTop="3dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="@+id/tilPasswordConfirm"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        tools:text="- Больше символов; \n- Цифры; \n- Заглавные буквы." />

    <LinearLayout
        android:id="@+id/llAgree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tilPasswordConfirm"
        app:layout_constraintTop_toBottomOf="@+id/tv_errors"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/flAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:minWidth="48dp"
            android:minHeight="48dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbAgree"
                fontPath="fonts/Roboto-Light.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:clickable="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:theme="@style/CheckBoxNew" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/auth_title_text"
            tools:text="@string/auth_agree_user_agreement" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>