...
    <string name="auth_input_email_again_hint">Введите e-mail повторно</string>
    <string name="auth_input_password_hint">Пароль</string>
    <string name="auth_input_password_confirm_hint">Повтор пароля</string>
    <string name="auth_agree_user_agreement">Согласен с пользовательским соглашением</string>
    <string name="auth_agree_address">https://www.sozidateli.ru/politics</string>
    <string name="auth_register_with_sn">или зарегистрируйтесь с помощью соцсети</string>
    <string name="auth_action_register">Зарегистрироваться</string>
    <string name="auth_register_finish">Пожалуйста, завершите регистрацию</string>
    <string name="auth_action_continue">Далее</string>
    <string name="auth_error_no_first_name">Введите имя</string>
    <string name="auth_error_no_last_name">Введите фамилию</string>
    <string name="auth_error_wrong_email">Введите корректный e-mail</string>
    <string name="auth_error_wrong_login">Пожалуйста, укажите корректный логин</string>
...
    <string name="profile_edit_name_and_photo">ФИО и фото</string>
    <string name="profile_edit_change_photo">Изменить фото</string>
    <string name="profile_edit_remove_photo">Удалить фото</string>
    <string name="profile_edit_user_surname">Укажите Вашу фамилию</string>
    <string name="profile_edit_user_name">Укажите Ваше имя</string>
    <string name="profile_edit_user_middle_name">Укажите Ваше отчество</string>
    <string name="profile_edit_user_no_middle_name">Нет отчества</string>
    <string name="profile_edit_empty_field_error">Необходимо заполнить поле</string>
    <string name="profile_edit_name_disabled_title">Изменить ФИО</string>
    <string name="profile_edit_name_disabled_message">Чтобы изменить фамилию, имя и отчество, пожалуйста, обратитесь в службу технической поддержки: %s</string>
    <string name="profile_edit_email_hint">E-mail</string>
    <string name="profile_edit_email_invalid">Введите правильный e-mail</string>
    <string name="profile_edit_request_error">Ошибка обновления данных</string>
...
