...
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWorkPhone"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:digits=" 0123456789()-+"
                    android:hint="@string/profile_phone_work"
                    android:inputType="phone" />
            </com.example.ui.views.CustomTextInputLayout>

...
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAdditionalNumber"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:digits="0123456789"
                    android:hint="@string/profile_additional_number"
                    android:inputType="phone"
                    android:maxLength="6" />
            </com.example.ui.views.CustomTextInputLayout>
...
