<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/profile_padding_start"
    android:paddingEnd="@dimen/profile_padding_start">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recovery_set_password_title"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="25dp"/>

    <com.example.ui.views.passwordView.PasswordCustomView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_action_button_selector"
        android:text="@string/save"
        android:textColor="@color/text_color_action_button" />
</LinearLayout>